New Home Page Layout and New Project: Toucan

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -119,56 +119,50 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/toucan/carmel-arquelau-bV3RXy9Upqg-unsplash.jpg);opacity: 1;">
+                style="background-image: url(img/works/toucan/carmel-arquelau-bV3RXy9Upqg-unsplash.png);opacity: 1;">
             </div>
         </div>
 
 
         <!-- Work Content -->
 
-        <section data-midnight="white" class="container project-detail white-bg padtop_60">
-
-            <div class="row lightbox-gallery">
-                <div class="col-lg-8">
-                    <h2 class="title bottom_30">Storytelling Bootcamp</h2>
-                    <p>For over 130 years, the National Geographic Society has funded groundbreaking scientists
-                        and explorers and has helped them share their findings with the world. In an effort to
-                        provide their grantees with the knowledge, and skills, to continue sharing their work; the
-                        Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the
-                        National Geographic explorers how to better communicate their work with a broad audience,
-                        and I had the pleasure of designing the look of all the material used in these workshops.
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h2 class="title bottom_30">Credits</h2>
-                    <p>Dir, Creative Strategy: Jeff Honea,
-                        <br>Creative Director: Christos DeVaris,
-                        <br>Copy Writer: Sarah DeLucia,
-                        <br>Designer: Peter Verastegui
-                    </p>
+        <section data-midnight="white" class="white-bg">
+            <div class="container project-detail padtop_30">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-8">
+                        <h2 class="title bottom_30">A Portfolio Template</h2>
+                        <p>The idea for this template came to me after I made a portfolio website for a friend, then
+                            remmebering that I had done that before,
+                            and I realizing I would probably do it again. So I tought myself some
+                            bootstrap, thanks internet, and made this template
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2 class="title bottom_30">Credits</h2>
+                        <p>Creative Director: Peter Verastegui,
+                            <br>Teacher: The Internet
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="container lightbox-gallery toucan-grey" data-midnight="dark">
-            <div class="row lightbox-gallery">
-                <div class="col-lg-4 offset-lg-1">
-                    <img class="bottom_30 image" src="img/works/toucan/choose-a-color.gif" alt="Will-Smith">
-                </div>
-                <div class="col-lg-4 offset-lg-1">
-                    <h1 class="white-text toucan-h1 bottom_30">Choose your color & theme</h1>
-                    <p class="white-text toucan-p bottom_10">Short answer, bad user experience. Thinking as a UX person
-                        I
-                        thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
-                        process. You
-                        see he walked in that room without having filed a proper request!. So of course he was not aware
-                        of what was
-                        in store for him. Lack of awareness, a very familiar problem in our galaxy.
-                    </p>
+        <section class="toucan-grey" data-midnight="dark">
+            <div class="container project-detail">
+                <div class="row lightbox-gallery top_90">
+                    <div class="col-lg-4 offset-lg-1">
+                        <img class="bottom_30 image" src="img/works/toucan/choose-a-color.gif" alt="Will-Smith">
+                    </div>
+                    <div class="col-lg-4 offset-lg-1">
+                        <h1 class="white-text toucan-h1 bottom_30">Choose your color & theme</h1>
+                        <p class="white-text toucan-p bottom_10">In this template you can choose a "highlight" color, or
+                            add your own, and you can switch from dark to light theme with one click
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="white" class="img-fluid">
+        <div data-midnight="dark" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/dark-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
@@ -179,7 +173,7 @@
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container white-bg  p-lg-0 p-sm-2">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 align-self-center">
                     <p class="display-kanit text-center top_90">the whole spiel...</p>
                 </div>
             </div>
@@ -191,7 +185,7 @@
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
             <div class="row lightbox-gallery">
-                <div class="col-lg-2 offset-lg-2 pb-3">
+                <div class="col-lg-2 offset-lg-2 pb-3 align-self-center">
                     <img class="d-lg-block" src="img/works/toucan/bootstrap-logo.png">
                 </div>
                 <div class="col-lg-6">
@@ -212,7 +206,7 @@
         <section data-midnight="white" class="container project-detail white-bg padtop_60">
             <div class="row lightbox-gallery">
                 <div class="col-lg-8 offset-col-2">
-                    <h1 class="toucan-h1 padtop_20">Thoroughly documented</h1>
+                    <h1 class="toucan-h1 padtop_60">Thoroughly documented</h1>
                     <p class="toucan-p bottom_60">Detailed documentation, which includes: code snippets for all
                         components styled
                         for this theme, detailed steps on how to add your own color, and change the theme's font
@@ -256,64 +250,95 @@
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
-        <section class="container toucan-green pt-o mt-0">
-            <div class="row lightbox-gallery">
-                <div class="col-lg-4 offset-lg-1">
-                    <p class="toucan-p dark-green-text">Font families
-                    </p>
-                    <h1 class="toucan-h1">
-                        Kanit
-                    </h1>
-                    <p class="display-montserrat padbot_30">
-                        Montserrat
-                    </p>
-                </div>
-                <div class="col-lg-6">
-                    <p class="toucan-p dark-green-text">.toucan-h2 &#123; font-weight:
-                        900;
-                        font-size: 32px; &#125;
-                    </p>
-                    <h2 class="toucan-h2">
-                        h2
-                    </h2>
+        <section data-midnight="white" class="toucan-green pt-o mt-0">
+            <div class="container project-detail">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4 offset-lg-1">
+                        <p class="toucan-p dark-green-text">Font families
+                        </p>
+                        <h1 class="toucan-h1">
+                            Kanit
+                        </h1>
+                        <p class="display-montserrat padbot_30">
+                            Montserrat
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
+                        <p class="toucan-p dark-green-text">
+                            font-family: "Kanit", sans-serif; font-size: 32px
+                        </p>
+                        <h2 class="toucan-h2">
+                            h2
+                        </h2>
 
-                    <p class="toucan-p dark-green-text padtop_30">&#123; font-family: "Kanit", sans-serif; &#125;
-                    </p>
-                    <h3 class="toucan-h3">
-                        h3
-                    </h3>
-                    <p class="toucan-p dark-green-text padtop_30">&#123; font-family: "Montserrat", sans-serif;
-                        &#125;
-                    </p>
-                    <p class="">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                        cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                        <p class="toucan-p dark-green-text padtop_30">font-family: "Kanit", sans-serif; font-size: 18px
+                        </p>
+                        <h3 class="toucan-h3">
+                            h3
+                        </h3>
+                        <p class="toucan-p dark-green-text padtop_30">font-family: "Montserrat", sans-serif; font-size:
+                            18px
+                        </p>
+                        <p class="">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div class="img-fluid">
+        <div data-midnight="white" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/bootstrap-wave-0_09.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= 2 Images  / Start ========== -->
-        <div class="row lightbox-gallery pt-4 white-bg" data-midnight="white">
-            <div class="col-lg-6 offset-lg-1">
-                <h1 class="toucan-h1">Rich Preview</h1>
-                <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
-                </p>
-            </div>
-            <div class="col-lg-4 pt-4">
-                <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
-            </div>
-        </div>
+
+        <section data-midnight="white" class="white-bg">
+            <div class="container project-detail">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-6 offset-lg-1 align-self-center">
+                        <h1 class="toucan-h1">Rich Preview</h1>
+                        <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
+                        </p>
+                    </div>
+                    <div class="col-lg-4 pt-4">
+                        <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
+                    </div>
+                </div>
+        </section>
         <!-- ======= 2 Images  / End ========== -->
+        <section data-midnight="white" class="lightgrey-bg">
+            <div class="container project-detail">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-12">
+                        <h1 class="toucan-h1 text-center">Thanks for stopping by</h1>
+                        <p class="toucan-p bottom_30 text-center tex">enjoy the template and send some feedback.
+                        </p>
+                        <div class="text-center">
+                            <a href="https://peterveras.com/toucan/index.html" target="_blank">
+                                <button class="site-btn" data-tilt> Live Preview
+                                    <i class="icon ion-md-arrow-down"></i>
+                                </button>
+                            </a>
+
+                            <a href="/toucan/download/toucan.zip" download>
+                                <button class="site-btn padding_20" data-tilt> Download Here
+                                    <i class="icon ion-md-arrow-down"></i>
+                                </button>
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+        </section>
+
 
 
 
