--- a/index.html
+++ b/index.html
@@ -103,40 +103,8 @@
 ================================================== -->
     <div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">
       <div class="row lightbox-gallery">
-        <div class="col-lg-8 bottom_60 wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
-              src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-              allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-        <div class="col-lg-4">
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Galaxy.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
-            </a>
-          </div>
-
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Biodiversity-Festival.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
-                alt="Bat Flying Animation">
-            </a>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="row lightbox-gallery">
-
 
         <div class="col-lg-4">
-          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="USA-Today.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
-                alt="USA Today Brand Refresh">
-            </a>
-          </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Gallo-Guapo.html">
@@ -146,18 +114,11 @@
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Library-of-Congress.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
-                alt="Library of Congress">
+            <a href="USA-Today.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
+                alt="USA Today Brand Refresh">
             </a>
           </div>
-
-
-
-
-        </div>
-
-        <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Creating-Change.html">
@@ -165,6 +126,8 @@
                 alt="Creating Change">
             </a>
           </div>
+
+
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="UI-UX-Illustrations.html">
@@ -179,6 +142,68 @@
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
+          <!--  ================== HIDE 
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Racing-Extinction.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+                alt="">
+            </a>
+          </div>
+ ===================== -->
+
+
+          <!--  ================== HIDE 
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Biodiversity-Festival.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+                alt="Bat Flying Animation">
+            </a>
+          </div>
+          ===================== -->
+
+        </div>
+
+        <div class="col-lg-8">
+
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Galaxy.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/1600x883-Galaxy-Thumbnail.png"
+                alt="">
+            </a>
+          </div>
+
+          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="toucan-template.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
+                alt="Library of Congress">
+            </a>
+          </div>
+          <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
+                src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+          </div>
+
+
+
+
+        </div>
+
+
+      </div>
+
+      <div class="row lightbox-gallery">
+
+
+
+
+        <div class="col-lg-4">
+
+
+
 
 
         </div>
@@ -187,12 +212,6 @@
 
 
 
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Racing-Extinction.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
-                alt="">
-            </a>
-          </div>
 
 
 
@@ -211,6 +230,15 @@
 </a>
 --- a work -->
       </div>
+      <div class="row lightbox-gallery">
+        <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
+              src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+              allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+          <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
+      </div>
     </div>
 
     <!--  ================== ABOUT SECTION ===================== -->
@@ -224,12 +252,9 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hello, my name is Peter. I am Interaction designer that started his career as a
-            curious
-            student in art school. That curiosity took me from Graphics to Motion to Interaction. Now, in hindsight,
-            I've realized that no matter what hat I wore I found myself crafting experiences–and stories in one way or
-            another. To learn more about that journey check out my <a href="https://peterverastegui.wordpress.com/"
-              rel="noopener noreferrer" target="_blank">blog</a>
+          <p class="padtop_60 grey-text">Hello, my name is Peter. I am Interaction designer that helps companies make
+            products that are easy to use. To learn more about me, the person, check out my <a
+              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
             </li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
