--- a/toucan-template.html
+++ b/toucan-template.html
@@ -322,13 +322,13 @@
                         </p>
                         <div class="text-center">
                             <a href="https://peterveras.com/toucan/index.html" target="_blank">
-                                <button class="site-btn" data-tilt> Live Preview
+                                <button class="site-btn  bottom_30" data-tilt> Live Preview
                                     <i class="icon ion-md-arrow-down"></i>
                                 </button>
                             </a>
 
                             <a href="/toucan/download/toucan.zip" download>
-                                <button class="site-btn padding_20" data-tilt> Download Here
+                                <button class="site-btn  bottom_30" data-tilt> Download Here
                                     <i class="icon ion-md-arrow-down"></i>
                                 </button>
                             </a>
