--- a/Galaxy.html
+++ b/Galaxy.html
@@ -504,9 +504,9 @@
     <!-- Next -->
     <section>
       <div class="col align-self-center text-center top_30">
-        <a class="next-link" href="USA-Today.html">
+        <a class="next-link" href="toucan-template.html">
           <div class="nav-title">Next Work</div>
-          <div class="next-title">USA Today</div>
+          <div class="next-title">Toucan</div>
         </a>
       </div>
     </section>
