--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
         <div class="col-lg-8">
           <a href="/cv/Resume_Peter_Verastegui_September_(2020).pdf" target="_blank" download>
-            <button class="site-btn" data-tilt> Download Resume
+            <button class="site-btn" data-tilt> DOWNLOAD RESUME
               <i class="icon ion-md-arrow-down"></i>
             </button>
           </a>
