--- a/toucan-template.html
+++ b/toucan-template.html
@@ -155,9 +155,16 @@
                     <div class="col-lg-4 offset-lg-1">
                         <h1 class="white-text toucan-h1 bottom_30">Choose your color & theme</h1>
                         <p class="white-text toucan-p bottom_10">In this template you can choose a "highlight" color, or
-                            add your own, and you can switch from dark to light theme with one click
+                            add your own, and you can switch from dark to light theme with one click, try it:
                         </p>
+                        <a href="https://peterveras.com/toucan/index.html" target="_blank">
+                            <button class="site-btn top_30" data-tilt> LIVE PREVIEW
+                                <i class="icon ion-md-arrow-down"></i>
+                            </button>
+                        </a>
                     </div>
+
+
                 </div>
             </div>
         </section>
@@ -264,23 +271,22 @@
                         </p>
                     </div>
                     <div class="col-lg-6">
-                        <p class="toucan-p dark-green-text">
-                            font-family: "Kanit", sans-serif; font-size: 32px
+                        <p class="toucan-p dark-green-text">Heading titles &#40;H2&#41;
                         </p>
                         <h2 class="toucan-h2">
-                            h2
+                            Large Header
                         </h2>
 
-                        <p class="toucan-p dark-green-text padtop_30">font-family: "Kanit", sans-serif; font-size: 18px
+                        <p class="toucan-p dark-green-text padtop_30">Heading Subtitles &#40;H3&#41;
                         </p>
                         <h3 class="toucan-h3">
-                            h3
+                            Smaller Subtitles
                         </h3>
-                        <p class="toucan-p dark-green-text padtop_30">font-family: "Montserrat", sans-serif; font-size:
-                            18px
+                        <p class="toucan-p dark-green-text padtop_30">Paragraphs &#40;P&#41;
                         </p>
                         <p class="">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            Paragraphs: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                             voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
@@ -322,13 +328,13 @@
                         </p>
                         <div class="text-center">
                             <a href="https://peterveras.com/toucan/index.html" target="_blank">
-                                <button class="site-btn  bottom_30" data-tilt> Live Preview
+                                <button class="site-btn  bottom_30" data-tilt> LIVE PREVIEW
                                     <i class="icon ion-md-arrow-down"></i>
                                 </button>
                             </a>
 
-                            <a href="/toucan/download/toucan.zip" download>
-                                <button class="site-btn  bottom_30" data-tilt> Download Here
+                            <a href="/toucan/download/toucan.zip" target="_self" download>
+                                <button class="site-btn  bottom_30" data-tilt> DOWNLOAD HERE
                                     <i class="icon ion-md-arrow-down"></i>
                                 </button>
                             </a>
