--- a/USA-Today.html
+++ b/USA-Today.html
@@ -348,9 +348,9 @@
 
     <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Biodiversity-Festival.html">
+        <a class="next-link" href="Creating-Change.html">
           <div class="nav-title">Next Work</div>
-          <div class="next-title">Biodiversity Festival</div>
+          <div class="next-title">Creating-Change</div>
         </a>
       </div>
     </section>
