--- a/es.html
+++ b/es.html
@@ -366,7 +366,7 @@
 
         <div class="col-lg-8">
           <a href="/cv/CV_Peter_Verastegui_Octubre_(2020).pdf" target="popup" download>
-            <button class="site-btn" data-tilt> Descargar CV
+            <button class="site-btn" data-tilt> DESCARGAR CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
           </a>
