--- a/toucan-template.html
+++ b/toucan-template.html
@@ -131,10 +131,11 @@
                 <div class="row lightbox-gallery">
                     <div class="col-lg-8">
                         <h2 class="title bottom_30">A Portfolio Template</h2>
-                        <p>The idea for this template came to me after I made a portfolio website for a friend, then
+                        <p>The idea for this template came up after I made a portfolio website for a friend, then
                             remmebering that I had done that before,
-                            and I realizing I would probably do it again. So I tought myself some
-                            bootstrap, thanks internet, and made this template
+                            and realizing that I will probably do a site like that again, then I tought
+                            myself I should make a template. So, I thought myself some
+                            bootstrap, thanks internet, and made it happen.
                         </p>
                     </div>
                     <div class="col-lg-4">
@@ -310,7 +311,8 @@
                 <div class="row lightbox-gallery">
                     <div class="col-lg-6 offset-lg-1 align-self-center">
                         <h1 class="toucan-h1">Rich Preview</h1>
-                        <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
+                        <p class="toucan-p bottom_30">Update the image that shows up when you share <br>the address of
+                            your site on the interwebs
                         </p>
                     </div>
                     <div class="col-lg-4 pt-4">
