--- a/UI-UX-Illustrations.html
+++ b/UI-UX-Illustrations.html
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </div>
-        <section data-midnight="dark">
+        <section data-midnight="dark" class="pb-0">
             <div class="container">
                 <!-- Images -->
                 <div class="row lightbox-gallery">
@@ -241,8 +241,8 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script type="text/javascript">
-    var currentYear = new Date().getFullYear();
-    document.getElementById("copyYear").innerHTML = currentYear;
+        var currentYear = new Date().getFullYear();
+        document.getElementById("copyYear").innerHTML = currentYear;
     </script>
 </body>
 
