--- a/toucan-template.html
+++ b/toucan-template.html
@@ -179,10 +179,10 @@
             <img class="img-fluid" src="img/works/toucan/white-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <section data-midnight="white" class="container white-bg  p-lg-0 p-sm-2">
-            <div class="row">
+        <section data-midnight="white" class="container white-bg">
+            <div class=" row">
                 <div class="col-lg-12 align-self-center">
-                    <p class="display-kanit text-center top_90">the whole spiel...</p>
+                    <p class="display-kanit text-center padtop_90">the whole spiel...</p>
                 </div>
             </div>
         </section>
@@ -211,10 +211,10 @@
             <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <section data-midnight="white" class="container project-detail white-bg padtop_60">
+        <section data-midnight="white" class="container project-detail white-bg padtop_90 pb-3">
             <div class="row lightbox-gallery">
                 <div class="col-lg-8 offset-col-2">
-                    <h1 class="toucan-h1 padtop_60">Thoroughly documented</h1>
+                    <h1 class="toucan-h1 padtop_90">Thoroughly documented</h1>
                     <p class="toucan-p bottom_60">Detailed documentation, which includes: code snippets for all
                         components styled
                         for this theme, detailed steps on how to add your own color, and change the theme's font
@@ -258,7 +258,7 @@
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
-        <section data-midnight="white" class="toucan-green pt-o mt-0">
+        <section data-midnight="white" class="toucan-green mt-0 pb-0">
             <div class="container project-detail">
                 <div class="row lightbox-gallery">
                     <div class="col-lg-4 offset-lg-1">
@@ -321,38 +321,48 @@
                 </div>
         </section>
         <!-- ======= 2 Images  / End ========== -->
-        <section data-midnight="white" class="lightgrey-bg">
-            <div class="container project-detail">
-                <div class="row lightbox-gallery">
-                    <div class="col-lg-12">
-                        <h1 class="toucan-h1 text-center">Thanks for stopping by</h1>
-                        <p class="toucan-p bottom_30 text-center tex">enjoy the template and send some feedback.
-                        </p>
-                        <div class="text-center">
-                            <a href="https://peterveras.com/toucan/index.html" target="_blank">
-                                <button class="site-btn  bottom_30" data-tilt> LIVE PREVIEW
-                                    <i class="icon ion-md-arrow-down"></i>
-                                </button>
-                            </a>
 
-                            <a href="/toucan/download/toucan.zip" target="_self" download>
-                                <button class="site-btn  bottom_30" data-tilt> DOWNLOAD HERE
-                                    <i class="icon ion-md-arrow-down"></i>
-                                </button>
-                            </a>
-                        </div>
+        <!-- ======= Full Screen Image  / Start ========== -->
+        <div data-midnight="white" class="img-fluid">
+            <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
+        </div>
+        <!-- ======= Full Screen Image  / End ========== -->
+        <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
+            <div class="row lightbox-gallery">
+                <div class="col-lg-12">
+                    <h1 class="toucan-h1 text-center">Thanks for stopping by</h1>
+                    <p class="toucan-p bottom_30 text-center tex">enjoy the template and send some feedback.
+                    </p>
+                    <div class="text-center">
+                        <a href="https://peterveras.com/toucan/index.html" target="_blank">
+                            <button class="site-btn  bottom_30" data-tilt> LIVE PREVIEW
+                                <i class="icon ion-md-arrow-down"></i>
+                            </button>
+                        </a>
 
+                        <a href="/toucan/download/toucan.zip" target="_self" download>
+                            <button class="site-btn  bottom_30" data-tilt> DOWNLOAD HERE
+                                <i class="icon ion-md-arrow-down"></i>
+                            </button>
+                        </a>
                     </div>
 
                 </div>
+            </div>
         </section>
+        <!-- ======= Full Screen Image  / Start ========== -->
+        <div data-midnight="white" class="img-fluid">
+            <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
+        </div>
+        <!-- ======= Full Screen Image  / End ========== -->
+
 
 
 
 
         <!-- Next -->
         <section class="white-bg">
-            <div class="col align-self-center text-center top_30">
+            <div class="col align-self-center text-center">
                 <a class="next-link" href="USA-Today.html">
                     <div class="nav-title">Next Work</div>
                     <div class="next-title">USA Today</div>
