--- a/toucan-template.html
+++ b/toucan-template.html
@@ -133,8 +133,8 @@
                         <h2 class="title bottom_30">A Portfolio Template</h2>
                         <p>The idea for this template came up after I made a portfolio website for a friend, then
                             remmebering that I had done that before,
-                            and realizing that I will probably do a site like that again, then I tought
-                            myself I should make a template. So, I thought myself some
+                            and realizing that I will probably do a site like that again, then I thought to
+                            myself "I should make a template." So, I taught myself some
                             bootstrap, thanks internet, and made it happen.
                         </p>
                     </div>
@@ -412,8 +412,6 @@
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
     </script>
-
-
 
 
 </body>
