--- a/toucan-template.html
+++ b/toucan-template.html
@@ -330,8 +330,8 @@
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
             <div class="row lightbox-gallery">
                 <div class="col-lg-12">
-                    <h1 class="toucan-h1 text-center">Thanks for stopping by</h1>
-                    <p class="toucan-p bottom_30 text-center tex">enjoy the template and send some feedback.
+                    <h1 class="toucan-h1 text-center">Enjoy the freebie</h1>
+                    <p class="toucan-p bottom_30 text-center tex">send some feedback!
                     </p>
                     <div class="text-center">
                         <a href="https://peterveras.com/toucan/index.html" target="_blank">
