Updated UI Screens for Galaxy Project
• Link to free file on Figma
• Slide with dark and light mode

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -331,7 +331,7 @@
             <div class="row lightbox-gallery">
                 <div class="col-lg-12">
                     <h1 class="toucan-h1 text-center">Enjoy the freebie</h1>
-                    <p class="toucan-p bottom_30 text-center tex">send some feedback!
+                    <p class="toucan-p bottom_30 text-center text">send some feedback!
                     </p>
                     <div class="text-center">
                         <a href="https://peterveras.com/toucan/index.html" target="_blank">
