--- a/Galaxy.html
+++ b/Galaxy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class=" js no-touch cssanimations csstransitions">
 
 <head>
   <title>Peter Verastegui | Portofolio</title>
@@ -11,7 +11,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,7 +22,7 @@
   <link rel="shortcut icon" href="img/favico.png">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -31,9 +31,10 @@
 </head>
 
 <body>
+  <div class="fadeffect"></div>
 
   <!-- Preloader -->
-  <div id="preloader">
+  <div id="preloader" style="display: none;">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
       <path fill="none"
         d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z"
@@ -47,13 +48,47 @@
   <main>
 
     <!-- Header -->
-    <header>
-      <a href="index.html" class="logo float-left"></a>
-      <div class="menu float-right">
-        <div class="nav-icon">
-          <span></span>
-          <span></span>
-          <span></span>
+    <header class="load" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 84px;">
+      <div class="midnightHeader default"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+          <a href="index.html" class="logo float-left"></a>
+          <div class="menu float-right">
+            <div class="nav-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="midnightHeader dark"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
+          <a href="index.html" class="logo float-left"></a>
+          <div class="menu float-right">
+            <div class="nav-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="midnightHeader white"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+          <a href="index.html" class="logo float-left"></a>
+          <div class="menu float-right">
+            <div class="nav-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -63,19 +98,19 @@
       <div class="menu-container">
         <div class="menu-holder">
           <ul class="navmenu">
-            <li class="scroll">
+            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
               <a href="index.html#portfolio">Portfolio</a>
             </li>
-            <li class="scroll">
+            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
-            <li class="scroll">
+            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
               <a href="index.html#about">About</a>
             </li>
-            <li class="scroll">
+            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
               <a href="index.html#resume">Resume</a>
             </li>
-            <li class="scroll">
+            <li class="scroll" style="opacity: 0; transform: matrix(1, 0, 0, 1, 0, 50);">
               <a href="index.html#contact">Contact Information</a>
             </li>
           </ul>
@@ -85,16 +120,42 @@
 
 
     <!-- Up to top -->
-    <div class="uptotop">
-      <div class="holder">
-        <span>Up to top</span>
-        <div class="arrow"></div>
+    <div class="uptotop" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 877px;">
+      <div class="midnightHeader default"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+          <div class="holder">
+            <span>Up to top</span>
+            <div class="arrow"></div>
+          </div>
+        </div>
+      </div>
+      <div class="midnightHeader dark"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
+          <div class="holder">
+            <span>Up to top</span>
+            <div class="arrow"></div>
+          </div>
+        </div>
+      </div>
+      <div class="midnightHeader white"
+        style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
+        <div class="midnightInner"
+          style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
+          <div class="holder">
+            <span>Up to top</span>
+            <div class="arrow"></div>
+          </div>
+        </div>
       </div>
     </div>
 
 
     <!-- Hero Section -->
-    <div class="hero galaxy-bg" data-midnight="dark">
+    <div class="hero galaxy-bg load" data-midnight="dark" style="height: 917px;">
       <div class="hero-content">
         <div class="inner">
           <h1 class="title">Galaxy</h1>
@@ -106,10 +167,10 @@
         <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
           style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-          <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
+          <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
           <path id="mouse"
             d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z"
-            style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
+            style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
       <div class="hero-image" style="background-image: url(img/works/Galaxy/Hero-Image-Galaxy.png);opacity: 1;">
@@ -152,17 +213,17 @@
           <ul class="nav nav-pills nav-fill white-link navmenu" id="pills-tab" role="tablist">
             <li class="nav-item scroll" role="presentation">
 
-              <a class="nav-link" id="white-link" data-toggle="pill" href="#one" rel='no-refresh' role="tab"
+              <a class="nav-link" id="white-link" data-toggle="pill" href="#one" rel="no-refresh" role="tab"
                 aria-controls="pills-home" aria-selected="true">1: Mapping Requests
               </a>
             </li>
             <li class="nav-item scroll" role="presentation">
               <a class="nav-link" id="white-link" data-toggle="pill" href="#two" role="tab"
-                aria-controls="pills-profile" aria-selected="false">2: Disigning & Iteraring</a>
+                aria-controls="pills-profile" aria-selected="false">2: Disigning &amp; Iteraring</a>
             </li>
             <li class="nav-item scroll" role="presentation">
               <a class="nav-link" id="white-link" data-toggle="pill" href="#three" role="tab"
-                aria-controls="pills-profile" aria-selected="false">3: Intuitive & Simple UI</a>
+                aria-controls="pills-profile" aria-selected="false">3: Intuitive &amp; Simple UI</a>
             </li>
           </ul>
         </div>
@@ -415,7 +476,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12 bottom_60">
-              <h2 class="text text-center white-text title">Intuitive & Simple UI</h2>
+              <h2 class="text text-center white-text title">Intuitive &amp; Simple UI</h2>
             </div>
           </div>
 
@@ -487,7 +548,7 @@
             <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2 col-sm-12">
               <div style="width:100%;height:0;padding-bottom:75%;position:relative;"><iframe
                   src="https://giphy.com/embed/R7m04yMaGWVeE" width="100%" height="100%" style="position:absolute"
-                  frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
+                  frameborder="0" class="giphy-embed round-corners" allowfullscreen=""></iframe>
               </div>
             </div>
             <!-- Images -->
@@ -495,6 +556,7 @@
               <p class="text-center grey-text">Thanks for scrolling this far...now you have to forget
                 what you saw.</p>
             </div>
+          </div>
         </section>
 
       </div>
@@ -534,11 +596,11 @@
           </div>
           <div class="col-lg-2 bottom_30">
             <p>
-              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+              ©&nbsp;<span id="copyYear">2021</span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
-      </div>
+
     </footer>
 
   </main>
@@ -552,6 +614,8 @@
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
   </script>
+
+
 
 
 
