Updates to layout of Galaxy
spreading accross 9 columns and using justify-content-center to align all in the middle.

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -181,9 +181,9 @@
     <!-- Work Content -->
 
     <div data-midnight="dark" class="container project-detail galaxy-bg-purple padtop_60">
-      <div class="row lightbox-gallery">
+      <div class="row lightbox-gallery justify-content-center">
 
-        <div class="col-lg-10 offset-lg-1 col-md-12 col-sm-12 cl-xs-12">
+        <div class="col-lg-9">
           <h2 class="title text-center white-text bottom_30">Why Agent J got the small gun?</h2>
           <p class="white-text bottom_60">Short answer, bad user experience. Thinking as a UX person I
             thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
@@ -194,8 +194,8 @@
           </p>
         </div>
 
-        <div class="col-lg-10 offset-lg-1 col-md-12 col-sm-12 cl-xs-12 image">
-          <img class="bottom_30 round-corners" src="img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png"
+        <div class="col-lg-9">
+          <img class="image bottom_30 round-corners" src="img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png"
             alt="Will-Smith">
         </div>
         <div class="container project-detail top_30 bottom_60 col-lg-8 offset-lg-2">
@@ -245,8 +245,8 @@
           </div>
 
           <div class="container project-detail">
-            <div class="row lightbox-gallery">
-              <div class="col-lg-4">
+            <div class="row lightbox-gallery justify-content-center">
+              <div class="col-lg-3">
                 <div class="image">
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
                 </div>
@@ -265,7 +265,7 @@
                   <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-3">
                 <div class="image">
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
                 </div>
@@ -285,7 +285,7 @@
                   <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-3">
                 <div class="image">
                   <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
                 </div>
@@ -365,7 +365,7 @@
               <div class="col-lg-4">
                 <h4 class="text-white">Then it goes to the Requests Ledger</h4>
                 <p class="grey-text">
-                  Here agent J can track the status of his request from begining to end.
+                  Here the supervisors can track requests coming their way from begining to end.
                 </p>
               </div>
               <!-- Description -->
@@ -384,7 +384,14 @@
           <div class="container project-detail">
             <div class="row">
               <div class="col-lg-12 bottom_120">
-                <h4 class="text text-center text-white">The final product</h4>
+                <h4 class="text text-center text-white">Putting it all together</h4>
+                <p class="grey-text text-center">
+                  1. Assignee logs into application an makes a request <br>
+                  2. Supervisor receives request <br>
+                  3. Supervisor sends request to CFO with a proposed
+                  budget <br>
+                  4. CFO appoves or denies proposal
+                </p>
               </div>
             </div>
             <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
@@ -409,7 +416,7 @@
               </div>
               <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-8 offset-lg-2">
+              <div class="col-lg-10 offset-lg-1">
                 <!-- testimonials -->
                 <div class="owl-carousel owl-theme testimonials bottom_60" data-autoplay="false" data-nav="true"
                   data-dots="false" data-items-desktop="1" data-items-desktop-small="1" data-items-tablet="1"
@@ -459,7 +466,7 @@
               <div class="col-lg-10 offset-lg-1 top_30">
                 <h4 class="text-white">The Request Ledger</h4>
                 <p class="bottom_60 white-text">
-                  Here a supervisor can find all the request that were sent his way in one place.
+                  Here supervisors can find all the request that were sent their way in one place.
                 </p>
               </div>
               <!-- Description -->
@@ -558,7 +565,7 @@
           </div>
           <!-- Images -->
         </section>
-        <section data-midnight="dark" class="black-bg">
+        <section data-midnight="dark" class="black-bg pt-1">
           <div class="container">
             <!-- Images -->
             <div class="row lightbox-gallery">
