layout update for Toucan project

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -212,8 +212,8 @@
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container project-detail white-bg padtop_90 pb-3">
-            <div class="row lightbox-gallery">
-                <div class="col-lg-8 offset-col-2">
+            <div class="row lightbox-gallery justify-content-center">
+                <div class="col-lg-10">
                     <h1 class="toucan-h1 padtop_90">Thoroughly documented</h1>
                     <p class="toucan-p bottom_60">Detailed documentation, which includes: code snippets for all
                         components styled
@@ -222,21 +222,21 @@
                 </div>
             </div>
             <!-- ======= 2 Images  / Start ========== -->
-            <div class="row lightbox-gallery pt-4" data-midnight="white">
+            <div class="row lightbox-gallery pt-4 justify-content-center" data-midnight="white">
                 <div class="col-lg-4">
                     <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_06.png" alt="">
                 </div>
-                <div class="col-lg-8 pt-4">
+                <div class="col-lg-6 pt-4">
                     <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_07.png" alt="">
                 </div>
             </div>
             <!-- ======= 2 Images  / End ========== -->
             <!-- ======= 2 Images  / Start ========== -->
-            <div class="row lightbox-gallery pt-4" data-midnight="white">
-                <div class="col-lg-4">
+            <div class="row lightbox-gallery pt-4 justify-content-center" data-midnight="white">
+                <div class="col-lg-5">
                     <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_08.png" alt="">
                 </div>
-                <div class="col-lg-8 pt-4">
+                <div class="col-lg-5 pt-4">
                     <img class="d-block w-100 padbot_60" src="img/works/toucan/Code-snipets-sample_09.png" alt="">
                 </div>
             </div>
