--- a/Galaxy.html
+++ b/Galaxy.html
@@ -390,7 +390,7 @@
                   2. Supervisor receives request <br>
                   3. Supervisor sends request to CFO with a proposed
                   budget <br>
-                  4. CFO appoves or denies proposal
+                  4. CFO approves or denies proposal
                 </p>
               </div>
             </div>
